--- a/style.css
+++ b/style.css
@@ -24,6 +24,20 @@ button{
     
 }
 
+input:invalid{
+    border-color: red;
+}
+
+.error {
+    width: 100%;
+    padding: 0;
+  
+    font-size: 80%;
+    color: red;
+    border-radius: 0 0 5px 5px;
+  
+    box-sizing: border-box;
+  }
 
 
 .bookCard {
